--- a/style.css
+++ b/style.css
@@ -7,10 +7,13 @@ body{
 @keyframes delete {
     0%{
         opacity: 1;
+        position: relative;
+        top: 0;
     }
     100%{
         opacity: 0;
-        display: none;
+        position: relative;
+        top: 50px;
     }
 }
 .delete-animation{
