--- a/style.css
+++ b/style.css
@@ -21,3 +21,14 @@ body{
     animation-duration: 1s;
     animation-fill-mode: forwards;
 }
+@keyframes pop-swirl {
+    0% {
+      transform: scale(0) rotate(360deg);
+    }
+    60% {
+      transform: scale(0.8) rotate(-10deg);
+    }
+    100% {
+      transform: scale(1) rotate(0deg);
+    }
+  }
